--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Tripify</a>
+        <a class="navbar-brand" href="#">Tripplie</a>
       </div>
       <div class="navbar-collapse collapse">
         <form class="navbar-form navbar-right" role="form">
@@ -32,10 +32,14 @@
       </div><!--/.navbar-collapse -->
     </div>
   </div>
+   <!-- Main jumbotron for a primary marketing message or call to action -->
+
+       <%= yield %>
+      
 
       
 
-  <%= yield %>
+  
 
   
 
