--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,24 +1,29 @@
-<div class="page-header">
-  <h1>Listing trips</h1>
+<div>
+  <h1>My Trips</h1>
+</div>    
+
+<div class="trip">
+  <% @trips.each do |trip| %>
+    <div>
+      <strong><%= link_to trip.name, trip_posts_path(trip.id) %></strong>
+      <p><%= trip.duration %></p>
+
+      <div class="meta">
+        <%= link_to time_ago_in_words(trip.created_at) + " ago", trip %>
+        <span class="admin">
+          | <%= link_to "Details", edit_trip_path(trip) %> |
+          <%= link_to "Remove", trip, method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
+      </div>  
+
+  <% end %>
 </div>
 
-  
-
-<% @trips.each do |trip| %>
-
-  <%= trip.name %>
-  <%= trip.duration %>
-  <%= link_to 'See Recommendations' %>
-  <%= link_to 'Show', trip %> 
-  <%= link_to 'Edit', edit_trip_path(trip) %>
-  <%= link_to 'Destroy', trip, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-
-</div>  
-
-<% end %>
+<div>
+  <%= link_to 'New Trip', new_trip_path, :class=>"btn btn-primary btn-lg" %>  
+</div>
 
 
-<br>
 
-<%= link_to 'New Trip', new_trip_path, :class=>"btn btn-primary btn-lg" %>
+
+
  
