added validations to post model

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <%= link_to "Trips", trips_path %>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
