--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,6 +6,7 @@
       <strong><%= post.site %></strong>
       <p><%= post.description %></p>
       <%= link_to "Edit", edit_trip_post_path(@trips.id, post.id) %>
+      <%= link_to "Delete", trip_post_path(@trips.id, post), method: :delete, data: { confirm: "Are you sure you want to delete?" } %>
     </div>
   <% end %>
 </div>
