--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,26 @@
-<h1><%= @trips.name %></h1>
+<h1 class="trip-name page-header"><%= @trips.name %></h1>
 
-<div>
-  <% @trips.posts.each do |post| %>
-    <div class="recommendations">
-      <strong><%= post.site %></strong>
-      <p><%= post.description %></p>
-      <%= link_to "Edit", edit_trip_post_path(@trips.id, post.id) %>
-      <%= link_to "Delete", trip_post_path(@trips.id, post), method: :delete, data: { confirm: "Are you sure you want to delete?" } %>
+
+ 
+    <div class="row">
+      <% @trips.posts.each do |post| %>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <img data-src="/london.jpg">
+          <div class="caption">
+            <h3><%= post.site %></h3>
+            <p><%= post.description %></p>
+            <p><a><%= link_to "Edit", edit_trip_post_path(@trips.id, post.id), :class=>"btn btn-default" %></a>
+            <a><%= link_to "Delete", trip_post_path(@trips.id, post), method: :delete, data: { confirm: "Are you sure you want to delete?" }, :class=>"btn btn-default" %></a></p>      
+          </div>
+        </div>
+      </div>
+      <% end %>
     </div>
-  <% end %>
-</div>
+  
+
+
+
 
 <%= link_to "New Recommendation", new_trip_post_path, :class=>"btn btn-primary" %>
 <%= link_to "Back to My Trips", trips_path %>
