--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,22 +1,22 @@
-<div>
-  <h1>My Trips</h1>
-</div>    
+<h1 class="trip-name page-header">My Trips</h1>
 
-<div class="trip">
+
+<div class="row">
   <% @trips.each do |trip| %>
-    <div>
-      <strong><%= link_to trip.name, trip_posts_path(trip.id) %></strong>
-      <p><%= trip.duration %></p>
-
-      <div class="meta">
-        <%= link_to time_ago_in_words(trip.created_at) + " ago", trip %>
-        <span class="admin">
-          | <%= link_to "Details", edit_trip_path(trip) %> |
-          <%= link_to "Remove", trip, method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
-      </div>  
-
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img data-src="holder.js/300x300" alt="...">
+      <div class="caption">
+        <h3><%= link_to trip.name, trip_posts_path(trip.id) %></h3>
+        <p><%= trip.duration %></p>
+        <p><a href="#"><%= link_to time_ago_in_words(trip.created_at) + " ago", trip, :class=>"btn btn-default" %>
+        <span class="admin"></a> <a href="#"><%= link_to "Details", edit_trip_path(trip), :class=>"btn btn-default" %></a> <a> <%= link_to "Remove", trip, method: :delete, data: {confirm: "Are you sure you want to delete this post?"}, :class=>"btn btn-default" %></a></p>
+      </div>
+    </div>
+  </div>
   <% end %>
 </div>
+
 
 <div>
   <%= link_to 'New Trip', new_trip_path, :class=>"btn btn-primary btn-lg" %>  
