--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,8 +48,9 @@
     </div>
 
     <% end %>
-
+<section class="listings">
 <%= yield %>
-                    
+</section>      
+
 </body>
 </html>
