--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
   <% @trips.each do |trip| %>
-  <div class="col-sm-6 col-md-4">
+  <div class="col-xs-6 col-md-4">
     <div class="thumbnail">
       <img data-src="holder.js/300x300" alt="...">
       <div class="caption">
