added bcrypt and set up new user sessions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <%= link_to "Sign Up", new_user_path %>
                     </li>
                 </ul>
             </div>
